Fix handling of g_callable_info_get_n_args()

g_callable_get_n_args() returns gint but libpeas treats the return value as
guint in a few places.  If introspection is somewhat broken (and thus the
callable info that libpeas passes to g_callable_get_n_args() is NULL) then
libpeas will execute a couple for-loops from 0 to GUINT_MAX due to the mistype.

Also protect a few more paths that might get triggered due to missing
introspection data.

https://bugzilla.gnome.org/show_bug.cgi?id=633907