libpeas/peas-extension.c
@@ -217,6 +217,7 @@ peas_extension_call_valist (PeasExtension *exten,
   GIArgument retval;
   gpointer retval_ptr;
   gboolean ret;
+  gint n_args;
 
   g_return_val_if_fail (PEAS_IS_EXTENSION (exten), FALSE);
   g_return_val_if_fail (method_name != NULL, FALSE);
@@ -225,7 +226,9 @@ peas_extension_call_valist (PeasExtension *exten,
   if (callable_info == NULL)
     return FALSE;
 
-  gargs = g_newa (GIArgument, g_callable_info_get_n_args (callable_info));
+  n_args = g_callable_info_get_n_args (callable_info);
+  g_return_val_if_fail (n_args >= 0, FALSE);
+  gargs = g_newa (GIArgument, n_args);
   peas_gi_valist_to_arguments (callable_info, args, gargs, &retval_ptr);
 
   ret = peas_extension_callv (exten, method_name, gargs, &retval);
